# stock_analyzer

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile2  README.md  app.py  docker-compose.yml  finviz_scrape.bat  pyproject.toml  requirements.txt  sector_analysis_20250109.csv  sector_analysis_20250115.csv
.claude/: settings.json
config/: portfolio.yaml
data/: sp500_stock_data.csv
data/AAPL_cache/: AAPL_10y.csv  AAPL_20y.csv
data/ABBV_cache/: ABBV_10y.csv
data/ABNB_cache/: ABNB_10y.csv
data/ABT_cache/: ABT_10y.csv
data/ACGL_cache/: ACGL_10y.csv
data/ACN_cache/: ACN_10y.csv
data/ADBE_cache/: ADBE_10y.csv
data/ADI_cache/: ADI_10y.csv
data/ADM_cache/: ADM_10y.csv
data/ADP_cache/: ADP_10y.csv
data/ADSK_cache/: ADSK_10y.csv
data/AEE_cache/: AEE_10y.csv
data/AEP_cache/: AEP_10y.csv
data/AES_cache/: AES_10y.csv
data/AFL_cache/: AFL_10y.csv
data/AIG_cache/: AIG_10y.csv
data/AIZ_cache/: AIZ_10y.csv
data/AJG_cache/: AJG_10y.csv
data/AKAM_cache/: AKAM_10y.csv
data/ALB_cache/: ALB_10y.csv
data/ALGN_cache/: ALGN_10y.csv
data/ALLE_cache/: ALLE_10y.csv
data/ALL_cache/: ALL_10y.csv
data/AMAT_cache/: AMAT_10y.csv
data/AMCR_cache/: AMCR_10y.csv
data/AMD_cache/: AMD_10y.csv
data/AME_cache/: AME_10y.csv
data/AMGN_cache/: AMGN_10y.csv
data/AMP_cache/: AMP_10y.csv
data/AMT_cache/: AMT_10y.csv
data/AMZN_cache/: AMZN_10y.csv
data/ANET_cache/: ANET_10y.csv
data/ANSS_cache/: ANSS_10y.csv
data/AON_cache/: AON_10y.csv
data/AOS_cache/: AOS_10y.csv
data/APA_cache/: APA_10y.csv
docs/: database-cache-plan.md  prd-stack-tooling-improvements.md  stack-improvement-plan.md
finviz_recs/: Finviz_Scrape.xml  finviz_recs.json  finviz_recs_alt.json  finviz_recs_alt_up.json  finviz_recs_up.json  finviz_scrape.py
models/: AAPL_movement_daily_metadata.joblib  AAPL_movement_scaler_daily.joblib  AAPL_movement_scaler_daily_metadata.joblib  AAPL_movement_scaler_weekly_metadata.joblib  AAPL_movement_weekly.joblib  AAPL_movement_weekly_metadata.joblib
stock_analysis/: analyze_stock_data.py  cache_data.py  display_stock_data.py  efficient_frontier_plot.py  fetch_stock_data.py  main.py  market_indices.py  olt_test.py  portfolio_evaluating.py  sector_analysis.py  sp500_analysis.py  stock_finder.py  trading_cost_analysis.py
søkFinans/: Data_logreturns.csv  main.py
templates/: index.html  movement_analysis.html
tests/: test_fetch_stock_data.py  test_market_data_consumers.py  test_pct_change_no_futurewarning.py  test_portfolio_evaluating.py
(+1482 files in other folders)
