[tool.poetry]
name = "stock-analysis"
version = "0.1.0"
description = ""
authors = ["trovlunde <trym.overrein.lunde@bredvid.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
numpy = "^1.26.4"
plotly = "^5.19.0"
scikit-learn = "^1.6.1"
yfinance = "^0.2.54"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
ta = "^0.11.0"
flask = "^3.1.0"
flask-cors = "^5.0.0"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"
pyarrow = "^19.0.0"
pandas-market-calendars = "^4.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

