[project]
name = "stock-analysis"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas>=2.2.1",
    "numpy>=2.2.6",
    "plotly>=5.19.0",
    "scikit-learn>=1.6.1",
    "yfinance>=0.2.54",
    "seaborn>=0.13.2",
    "matplotlib>=3.8.3",
    "ta>=0.11.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "python-dotenv>=1.0.1",
    "gunicorn>=21.2.0",
    "pyarrow>=19.0.0",
    "pandas-market-calendars>=4.6.1",
    "tqdm>=4.66.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "PyPortfolioOpt>=1.5.5",
    "requests-ratelimiter>=0.4.0",
    "scipy>=1.12.0",
    "plottable>=0.1.5",
    "pandas-ta>=0.4.71b0",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
stock-analysis-daily = "stock_analysis.jobs.daily:main"
stock-analysis-evaluate = "stock_analysis.cli.evaluate_models:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
